# PersonalTaskCompanion

./: app.py  requirements.txt
.streamlit/: pyproject.toml
components/utils/: task_manager.py
