[project]
name = "personal-task-companion"
version = "1.0.0"
description = "A humanized Python to-do list web application built with Streamlit"
authors = [
    {name = "Assistant", email = "assistant@example.com"},
]
dependencies = [
    "streamlit>=1.28.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"